Update to gradle build